fix scroll bar of progress section on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -464,7 +464,6 @@
 
   .progress-panel {
     min-height: 72px;
-    max-height: 78px;
     padding: 0 0 4px;
   }
 
